# weixin

./: 00_START_HERE.md  ARCHITECTURE.md  CMakeLists.txt  DELIVERY_SUMMARY.txt  FILES.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
config/: config.json
include/: attitude.h  constants.h  kinematics.h  orbit.h  quaternion.h  satellite.h  types.h  vector3.h
include/config/: config.h
include/decision/: decision_tree.h  differential_game.h  formation_manager.h
include/formation/: formation_around.h  formation_base.h  formation_circumnavigate.h  formation_inspect.h  formation_retreat.h
scripts/: build.sh
src/: attitude.c  kinematics.c  main.c  orbit.c  quaternion.c  satellite.c  vector3.c
src/config/: config.c
src/decision/: decision_tree.c  differential_game.c  formation_manager.c
src/formation/: around_formation.c  circumnavigate_formation.c  formation_around.c  formation_base.c  formation_circumnavigate.c  formation_inspect.c  formation_retreat.c  inspect_formation.c  retreat_formation.c
